--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.9.0",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.1.0",
