--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
