--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
-    "express": "~4.16.1",
+    "express": "^5.1.0",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
